Now I redirect htmldoodads.appspot.com -> www.rulernow.com to make use of the domain I bought.

--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,8 @@ runtime: python
 api_version: 1
 
 handlers:
+- url: /ruler.html
+  script: redirector.py
 - url: /
   script: redirector.py
 - url: /
